Fix 'GOV.UK Notify' logo when focused
It's getting overlapped on the product page when
focused.

--- a/app/assets/stylesheets/govuk-frontend/overrides.scss
+++ b/app/assets/stylesheets/govuk-frontend/overrides.scss
@@ -81,3 +81,12 @@ $link-colour-on-grey-background: #1852ab;
     top: 21px;
   }
 }
+
+
+// make 'GOV.UK Notify' logo sit on top of any content below it
+// mainly to stop the breadcrumb, which has a negative margin-top,
+// overlapping its focus style
+.govuk-header__link--homepage:focus {
+  position: relative;
+  z-index: 1;
+}
